2020-08-07  Stuart Caie <kyzer@cabextract.org.uk>

	* read_sys_file(): in a CHM file, the ControlData and ResetTable
	files are loaded entirely into memory, regardless of file size.
	This is not in the spirit of letting users control memory usage.

	ControlData previously had to be at least 28 bytes (in case a new,
	larger version of the file ever appeared), but is now rejected
	if not exactly 28 bytes.

	ResetTable can theoretically be huge; the longest LZX stream of
	16 exabytes could have a 4 petabyte ResetTable. Practically, the
	largest seen in the wild is 46 kilobytes (PHP manuals). I picked
	an arbitrary upper limit of 1MB; please get in contact if you
	know of any CHM files in the wild that are largest than this.

	Thanks to seviezhou on Github for reporting this.

2020-04-13  Stuart Caie <kyzer@cabextract.org.uk>

	* system.h: clear up libmspack's large file support.

	To support large files, do this:

	1. add any defines that your compiler needs to enable large file
	support. It may be supported by default.
	2. Define HAVE_FSEEKO if fseeko() and ftello() are available.
	3. Define SIZEOF_OFF_T to the value of sizeof(off_t); it must be a
	literal value because sizeof() can't be used in preprocessor tests.

	libmspack uses the off_t datatype for all file offsets. If off_t is
	less than 64 bits, libmspack will return an error when processing
	CHM files with offsets beyond 2GB, and won't search for CAB headers
	beyond 2GB into a file.  In both cases, it prints a warning message
	that the library doesn't support large files.

2020-04-13  Stuart Caie <kyzer@cabextract.org.uk>

	* macros.h: new header for the D(), LD/LU and EndGet???() macros.
	Use this instead of system.h.

        * system.h: if MSPACK_NO_DEFAULT_SYSTEM is defined, define
        inline versions of the only standard C functions used in
        mspack (strlen, memcmp, memset), so that no standard C library
        functions are needed at all.

2020-01-08  Stuart Caie <kyzer@cabextract.org.uk>
