@@ -1,3 +1,9 @@
+2020-08-10  Stuart Caie <kyzer@cabextract.org.uk>
+
+	* lzxd_decompress(): merged the code for decoding aligned and
+	verbatim blocks, also verified there is no significant performance
+	penalty.
+
 2020-08-07  Stuart Caie <kyzer@cabextract.org.uk>
 
 	* read_sys_file(): in a CHM file, the ControlData and ResetTable
